# OmniSight

./: .coverage  ARCHITECTURE.md  ARCHITECTURE.ru.md  LICENSE  README.md  README.ru.md
apps/api/: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  coverage.json  openapi.json  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_baseline_schema.py  002_relation_types.py  003_correlation_ingest_logs.py
apps/api/docker/: entrypoint.sh
apps/api/scripts/: benchmark_postgres_50k.py  benchmark_rsm_api.py  deploy_db.py  export_openapi.py  export_web_types.py  host_discover.py  host_discover.sh  init_postgres.py  reset_db.py  run_e2e_server.py  seed_demo.py  seed_scale_50k.py  sync_domain_constants.py  sync_schema_versions.py  unblock_db.py  verify_demo_acceptance.py  verify_rsm_correlation_flow.py
apps/api/src/: main.py
apps/api/src/core/: async_repository_bundle.py  async_service_factory.py  async_unit_of_work.py  auth.py  auth_lookup.py  background_tasks.py  cache.py  cache_models.py  catalog_defaults.py  config.py  constants.py  database.py  database_async.py  dev_secrets.py  exceptions.py  fixture_paths.py  health.py  ip_validation.py  logging_config.py  middleware.py  migrations.py  openapi_schema.py  openapi_tags.py  pagination.py  production.py  query_params.py  rate_limit.py  scheduler.py  schema.py  seed.py  serializers.py  session_commit.py  session_state.py  sync_transaction.py  worker_db.py
apps/api/src/models/: __init__.py  autodiscover.py  ci.py  graph_layout.py  infrastructure.py  relation.py  relation_type.py  user.py
apps/api/src/schemas/: ci.py  (+10 more)
apps/api/tests/: conftest.py  rsm_helpers.py  seed_helpers.py  test_autodiscover.py  test_graph_layout_api.py  test_nfr_scale.py  test_rsm_api.py  test_rsm_auth_users.py  test_tz_section8_endpoints.py  test_v1_api.py  v1_helpers.py
(+653 files in other folders)
