[project]
name = "omnisight-api"
version = "2.0.0"
description = "OmniSight RSM API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.2.0",
    "python-multipart>=0.0.17",
    "openpyxl>=3.1.5",
    "httpx>=0.28.0",
    "psycopg2-binary>=2.9.9",
    "paramiko>=3.5.0",
    "redis>=5.2.0",
    "asyncpg>=0.30.0",
    "greenlet>=3.0.0",
    "alembic>=1.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "python-docx>=1.1.2",
    "ruff>=0.11.0",
    "mypy>=1.15.0",
]

[tool.coverage.run]
omit = [
    "src/core/seed.py",
    "src/worker/__main__.py",
]

[tool.coverage.report]
fail_under = 70

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "UP047", "UP042"]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E402"]

[tool.mypy]
python_version = "3.12"
files = ["src"]
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
